@@ -6,7 +6,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import org.onebusaway.gtfs.model.Transfer;
 import org.opentripplanner.graph_builder.DataImportIssueStore;
 import org.opentripplanner.graph_builder.issues.IgnoredGtfsTransfer;
@@ -27,9 +26,6 @@ import org.opentripplanner.transit.model.site.Station;
 import org.opentripplanner.transit.model.site.Stop;
 import org.opentripplanner.transit.model.site.StopLocation;
 import org.opentripplanner.transit.model.timetable.Trip;
-import org.opentripplanner.util.logging.ThrottleLogger;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 /**
  * Responsible for mapping GTFS Transfer into the OTP model.
@@ -38,9 +34,6 @@ import org.slf4j.LoggerFactory;
  * of transfers you want to map.
  */
 class TransferMapper {
-
-  private static final Logger LOG = LoggerFactory.getLogger(TransferMapper.class);
-  private static final Logger FIXED_ROUTE_ERROR = ThrottleLogger.throttle(LOG);
 
   /**
    * This transfer is recommended over other transfers. The routing algorithm should prefer this
@@ -129,21 +122,37 @@ class TransferMapper {
     throw new IllegalArgumentException("Mapping missing for type: " + type);
   }
 
-  Collection<ConstrainedTransfer> map(Collection<org.onebusaway.gtfs.model.Transfer> allTransfers) {
+  TransferMappingResult map(Collection<org.onebusaway.gtfs.model.Transfer> allTransfers) {
     setup(!allTransfers.isEmpty());
 
-    return allTransfers
+    List<ConstrainedTransfer> constrainedTransfers = allTransfers
       .stream()
       .map(this::map)
       .filter(Objects::nonNull)
-      .collect(Collectors.toList());
+      .toList();
+
+    List<StaySeatedNotAllowed> staySeatedNotAllowed = allTransfers
+      .stream()
+      .map(this::toStaySeatedNotAllowed)
+      .filter(Objects::nonNull)
+      .toList();
+
+    return new TransferMappingResult(constrainedTransfers, staySeatedNotAllowed);
+  }
+
+  private StaySeatedNotAllowed toStaySeatedNotAllowed(Transfer t) {
+    Trip fromTrip = tripMapper.map(t.getFromTrip());
+    Trip toTrip = tripMapper.map(t.getToTrip());
+    if (t.getTransferType() == STAY_SEATED_NOT_ALLOWED) {
+      return new StaySeatedNotAllowed(fromTrip, toTrip);
+    } else return null;
   }
 
   ConstrainedTransfer map(org.onebusaway.gtfs.model.Transfer rhs) {
     Trip fromTrip = tripMapper.map(rhs.getFromTrip());
     Trip toTrip = tripMapper.map(rhs.getToTrip());
 
-    TransferConstraint constraint = mapConstraint(rhs, fromTrip, toTrip);
+    TransferConstraint constraint = mapConstraint(rhs);
 
     // If this transfer do not give any advantages in the routing, then drop it
     if (constraint.isRegularTransfer()) {
@@ -184,17 +193,14 @@ class TransferMapper {
     }
   }
 
-  private TransferConstraint mapConstraint(Transfer rhs, Trip fromTrip, Trip toTrip) {
+  private TransferConstraint mapConstraint(Transfer rhs) {
     var builder = TransferConstraint.create();
 
     builder.guaranteed(rhs.getTransferType() == GUARANTEED);
 
     // A transfer is stay seated, if it is either explicitly mapped as such, or in the same block
     // and not explicitly disallowed.
-    builder.staySeated(
-      rhs.getTransferType() == STAY_SEATED ||
-      (rhs.getTransferType() != STAY_SEATED_NOT_ALLOWED && sameBlockId(fromTrip, toTrip))
-    );
+    builder.staySeated(rhs.getTransferType() == STAY_SEATED);
 
     builder.priority(mapTypeToPriority(rhs.getTransferType()));
 
